--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Discord Bot that posts new blue posts from the Overwatch Announcements forum",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "^11.0.0"
+    "cheerio": "^0.22.0",
+    "discord.js": "^11.0.0",
+    "express": "^4.14.1",
+    "request": "^2.79.0"
   },
   "devDependencies": {},
   "scripts": {
